--- a/notes/3.1-Basic Data Types.md
+++ b/notes/3.1-Basic Data Types.md
@@ -3,8 +3,10 @@ title: 3.1 Basic Data Types
 layout: default
 ---
 
-# Basic Data Types:
+# Basic Data Types
+
 ## Integer Data Types
+
 | Data Type  | Size      | Min Value                  | Max Value                 |
 |-------------|----------|---------------------------:|--------------------------:|
 | char        | 1 byte   | -128                       | 127                       |
@@ -15,6 +17,7 @@ layout: default
 
 
 ## Floating Point Data Types
+
 - float - 4 bytes
 - double - 8 bytes
 - long double - 16 bytes
