--- a/notes/3.1-Basic Data Types.md
+++ b/notes/3.1-Basic Data Types.md
@@ -7,6 +7,8 @@ layout: default
 
 ## Integer Data Types
 
+Numbers are stored as integers.
+
 | Data Type  | Size      | Min Value                  | Max Value                 |
 |-------------|----------|---------------------------:|--------------------------:|
 | char        | 1 byte   | -128                       | 127                       |
