--- a/notes/3.1-Basic Data Types.md
+++ b/notes/3.1-Basic Data Types.md
@@ -7,7 +7,7 @@ layout: default
 
 ## Integer Data Types
 
-Numbers are stored as integers.
+Numbers are stored as integers. Even characters can be stored in an integer variable and treated as integers.
 
 | Data Type  | Size      | Min Value                  | Max Value                 |
 |-------------|----------|---------------------------:|--------------------------:|
@@ -18,14 +18,40 @@ Numbers are stored as integers.
 | long long   | 8 bytes  | -9,223,372,036,854,775,808 | 9,223,372,036,854,775,807 |
 
 
+### Modifiers
+Besides the length (range), we can also specify whether the variable can hold negative numbers.
+
+Adding ```signed``` implies the variable can store both positive and negative numbers. The first bit of the number is interpreted as the sign of the number with 1 representing a negative number. This is the default behavior and is not required.
+
+Adding ```unsigned``` implies the variable can only store positive numbers. This is used so that variables can be forced to store only positive numbers. A positive outcome is that the range of variable doubles.
+
+### Assigning Integer variables
+```C
+   int a = 5;     // assigning a decimal value
+   int b = 06;    // assigning an octal value
+   int c = 0x7;   // assigning a hexadecimal value
+   int d = 'f';   // assiging ASCII value of a character
+```
+
 ## Floating Point Data Types
+
+Floating point numbers are decimal numbers. Decimal numbers are called floating point numbers because the decimal point can "float" in the number. In an integer, the point is always at the end of the number. Double is called double because numbers in double can have double precision after the decimal point.
 
 - float - 4 bytes
 - double - 8 bytes
 - long double - 16 bytes
 
+Decimal numbers are normalized and stored.
+2.5 would be normalized to 0.25 E1 and stored.
+
+The 4 bytes of the floating point number is divided into
+- 1 bit for sign (positive/negative)
+- 8 bits for exponents
+- 23 bits for mantissa
+
 float - IEEE 754 Single precision floating point number
-3.402823E38
+
+Maximum value: 3.402823E38
 
 double - IEEE 754 double precision floating point number
 
